# chronopype

./: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
chronopype/: __init__.py  exceptions.py  time.py
chronopype/clocks/: __init__.py  backtest.py  base.py  config.py  realtime.py
chronopype/processors/: __init__.py  base.py  models.py  network.py
chronopype/runtime/: __init__.py  clock_runtime.py  config.py
docs/: index.md
docs/api/: backtest-clock.md  base-clock.md  clock-config.md  clock-mode.md  clock-runtime-config.md  clock-runtime.md  exceptions.md  network-processor.md  processor-state.md  processor-stats.md  realtime-clock.md  tick-processor.md  time.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: clocks.md  network-processor.md  performance.md  processors.md  runtime.md  time-utilities.md
flowtime/: models.py
flowtime/clocks/: backtest.py
scripts/: release.sh
tests/: conftest.py  test_coverage_misc.py  test_models.py  test_time.py
tests/clocks/: __init__.py  test_backtest.py  test_backtest_coverage.py  test_base.py  test_base_coverage.py  test_concurrent.py  test_dynamic_processors.py  test_errors.py  test_events.py  test_performance.py  test_realtime.py  test_realtime_coverage.py
tests/processors/: test_base.py  test_coverage.py  test_network.py
tests/runtime/: test_clock_runtime.py
